--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "best_score_gen",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.14",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "daisyui": "^5.2.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
-    "tailwindcss": "^4.1.14",
-    "typescript": "^5"
-  },
-  "browserslist": "> 1%"
+    "name": "best_score_gen",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build --turbopack",
+        "start": "next start",
+        "lint": "eslint"
+    },
+    "dependencies": {
+        "next": "15.5.4",
+        "react": "19.1.0",
+        "react-dom": "19.1.0"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4.1.14",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "daisyui": "^5.2.0",
+        "eslint": "^9",
+        "eslint-config-next": "15.5.4",
+        "eslint-config-prettier": "^10.1.8",
+        "prettier": "3.6.2",
+        "tailwindcss": "^4.1.14",
+        "typescript": "^5"
+    },
+    "browserslist": "> 1%"
 }
