--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@types/mongodb": "^4.0.6",
+        "@vercel/speed-insights": "^1.2.0",
         "chart.js": "^4.5.1",
         "mongodb": "^6.20.0",
         "next": "15.5.4",
