--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/mongodb": "^4.0.6",
         "@vercel/speed-insights": "^1.2.0",
         "chart.js": "^4.5.1",
+        "lucide-react": "^0.547.0",
         "mongodb": "^6.20.0",
         "next": "15.5.4",
         "react": "19.1.0",
