--- a/package.json
+++ b/package.json
@@ -1,38 +1,42 @@
 {
-    "name": "best_score_gen",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev --turbopack",
-        "build": "next build --turbopack",
-        "start": "next start",
-        "lint": "eslint",
-        "format": "prettier --write ."
-    },
-    "dependencies": {
-        "@types/mongodb": "^4.0.6",
-        "@vercel/speed-insights": "^1.2.0",
-        "chart.js": "^4.5.1",
-        "lucide-react": "^0.547.0",
-        "mongodb": "^6.20.0",
-        "next": "15.5.4",
-        "react": "19.1.0",
-        "react-chartjs-2": "^5.3.0",
-        "react-dom": "19.1.0"
-    },
-    "devDependencies": {
-        "@eslint/eslintrc": "^3",
-        "@tailwindcss/postcss": "^4.1.14",
-        "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
-        "daisyui": "^5.2.0",
-        "eslint": "^9",
-        "eslint-config-next": "15.5.4",
-        "eslint-config-prettier": "^10.1.8",
-        "prettier": "3.6.2",
-        "tailwindcss": "^4.1.14",
-        "typescript": "^5"
-    },
-    "browserslist": "> 1%"
+  "name": "best_score_gen",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
+    "start": "next start",
+    "lint": "eslint",
+    "format": "prettier --write ."
+  },
+  "dependencies": {
+    "@types/mongodb": "^4.0.6",
+    "@vercel/speed-insights": "^1.2.0",
+    "chart.js": "^4.5.1",
+    "lucide-react": "^0.547.0",
+    "mongodb": "^6.20.0",
+    "next": "16.0.10",
+    "react": "19.2.3",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "19.2.3"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@types/node": "^20",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "daisyui": "^5.2.0",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.10",
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "3.6.2",
+    "tailwindcss": "^4.1.14",
+    "typescript": "^5"
+  },
+  "browserslist": "> 1%",
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
+  }
 }
