--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@types/mongodb": "^4.0.6",
     "@vercel/speed-insights": "^1.2.0",
     "chart.js": "^4.5.1",
-    "lucide-react": "^0.547.0",
+    "cheerio": "^1.1.2",
     "mongodb": "^6.20.0",
     "next": "16.0.10",
+    "playwright": "^1.57.0",
     "react": "19.2.3",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.2.3"
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.14",
+    "@types/cheerio": "^0.22.35",
     "@types/node": "^20",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
