--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
         "@vercel/speed-insights": "^1.2.0",
         "chart.js": "^4.5.1",
         "cheerio": "^1.1.2",
+        "fetch-cookie": "^3.2.0",
         "mongodb": "^6.20.0",
         "next": "16.0.10",
-        "playwright": "^1.57.0",
         "react": "19.2.3",
         "react-chartjs-2": "^5.3.0",
         "react-dom": "19.2.3"
