--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
         "format": "prettier --write ."
     },
     "dependencies": {
+        "@auth/mongodb-adapter": "^3.11.1",
         "@types/mongodb": "^4.0.6",
         "@vercel/speed-insights": "^1.2.0",
         "chart.js": "^4.5.1",
         "cheerio": "^1.1.2",
         "fetch-cookie": "^3.2.0",
-        "mongodb": "^6.20.0",
+        "mongodb": "^6.21.0",
         "next": "16.0.10",
+        "next-auth": "^5.0.0-beta.30",
         "react": "19.2.3",
         "react-chartjs-2": "^5.3.0",
         "react-dom": "19.2.3"
