--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     },
     "browserslist": "> 1%",
     "overrides": {
+        "@auth/core": "0.41.0",
         "@types/react": "19.2.7",
         "@types/react-dom": "19.2.3"
     }
