--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@auth/mongodb-adapter": "^3.11.1",
         "@types/mongodb": "^4.0.6",
+        "@vercel/analytics": "^1.6.1",
         "@vercel/speed-insights": "^1.2.0",
         "chart.js": "^4.5.1",
         "cheerio": "^1.1.2",
